# suitbot_ros

./: .gitignore  CMakeLists.txt  package.xml
config/: planner_rviz.rviz  suitbot.yaml
data/: wean.pcd  wean_processed.pcd
launch/: dev_drivers.launch  job_test.launch  local_map_gen_test.launch  manual.launch  param_test.launch  planner_rviz_test.launch  serial_test.launch  silent_test.launch
msg/: CmdMsg.msg  LocalMapMsg.msg  TwoFloats.msg
obstacle_detection/scripts/: obj_detection_yolo.py  sparce_optical_flow.py
rviz/: local_map_gen.rviz  planner_rviz.rviz
scripts/: embedded_device_driver.py  lidar_driver.py  local_planner.py  parameters.py  plot_error.py  pub_odometry.sh  tracking_simulator.py
scripts/audio/: audio_listener.py  audio_speaker.py  audio_test.py  listening_test.py  speech_recognition.py
scripts/obstacle_detection/: dense_optical_flow.py  pedestrian_detection.py
scripts/test_serial/: test_serial.py
scripts/test_serial/test_serial/: test_serial.ino
src/: combine_pcd.cpp  job_management.cpp  job_management.h  lidar.cpp  lidar.h  lidar_parse.cpp  lidar_parse.h  local_map_generation.cpp  local_map_generation.h  map_processing.cpp  occupancy_map.cpp  occupancy_map.h  parameters.cpp  parameters.h  pcd_map_process.cpp  test.cpp  unit_test.cpp
src/localization/: initialization.cpp  initialization.h  localization_node.cpp  localization_node.h  localization_node0.cpp  particle_filter.cpp  particle_filter.h
src/path_planning/: a_star.cpp  a_star.h  planner.cpp  planner_node.cpp  planner_node.h
src/process_map/: combine_pcd.cpp  map_processing.cpp  pcd_map_process.cpp
src/test/: unit_test.cpp
src/utility/: pcl_utils.cpp  pcl_utils.h  tic_toc.h  utils.cpp  utils.h
srv/: InitializationSrvMsg.srv  ResetNode.srv  SetCourse.srv
